syntax = "proto3";

message GetNewAccessTokenRequest {
  string refresh_token = 1;
}

message GetNewAccessTokenResponse {
  string access_token = 1;
}
